--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,13 +158,12 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/Pierre
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPersonBP/AI/GameManager.GameManager
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 OpenAssetsAtExit=/Game/FirstPersonBP/AI/Spawn.Spawn
@@ -173,7 +172,7 @@ OpenAssetsAtExit=/Game/EnemyAI/EnemyAIController.EnemyAIController
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
-WindowSize=X=1286.400 Y=726.400
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1127,8 +1126,8 @@ TargetPoint=TargetPoint.Rendering.TextureStreaming,TargetPoint.Rendering.LOD,
 Spawn_C=
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument0,
-EnemyAI_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
-EnemyAIController_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
+EnemyAI_C=
+EnemyAIController_C=
 FindPlayer_C=
 
 [DetailCategories]
