--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -164,14 +164,13 @@ ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
 LastLevel=/Game/FirstPersonBP/Maps/Pierre
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/FirstPersonBP/AI/GameManager.GameManager
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 OpenAssetsAtExit=/Game/FirstPersonBP/AI/Spawn.Spawn
 OpenAssetsAtExit=/Game/EnemyAI/EnemyAI.EnemyAI
 OpenAssetsAtExit=/Game/EnemyAI/EnemyAIController.EnemyAIController
 OpenAssetsAtExit=/Game/FirstPersonBP/AI/EnemyAI.EnemyAI
-OpenAssetsAtExit=/Game/Assets/Monster/Monster_Blueprint.Monster_Blueprint
 OpenAssetsAtExit=/Game/FirstPersonBP/AI/PatrollingController.PatrollingController
 OpenAssetsAtExit=/Game/FirstPersonBP/AI/BB.BB
 OpenAssetsAtExit=/Game/FirstPersonBP/AI/PatrollingComponent.PatrollingComponent
@@ -1031,9 +1030,9 @@ PortalProxies.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/Pierre
-MRUItem1=/Game/FirstPersonBP/Maps/Paul
-MRUItem2=/Game/FirstPersonBP/Maps/Juliano
-MRUItem3=/Game/FirstPersonBP/Maps/Antoine
+MRUItem1=/Game/FirstPersonBP/Maps/Antoine
+MRUItem2=/Game/FirstPersonBP/Maps/Paul
+MRUItem3=/Game/FirstPersonBP/Maps/Juliano
 MRUItem4=/Game/FirstPersonBP/Maps/GameOver
 MRUItem5=/Game/FirstPersonBP/Maps/MainMenu
 MRUItem6=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -1127,7 +1126,7 @@ BoxComponent=BoxComponent.Collision.Collision,
 MenuPause_C=
 PlayerController=CameraComponent.PostProcess.Lens,
 MainMenu_C=
-SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
 SphereComponent=SphereComponent.Collision.Collision,
 GameManager_C=K2Node_CustomEvent.Inputs.InputArgument0,
 TargetPoint=TargetPoint.Rendering.TextureStreaming,TargetPoint.Rendering.LOD,
@@ -2109,6 +2108,46 @@ NavMeshBoundsVolume.Actor=True
 EnemyFindNextPatrollingLocation_C.Default=True
 EnemyFindNextPatrollingLocation_C.Task=True
 EnemyFindNextPatrollingLocation_C.Description=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.RayTracing=True
+PointLightComponent.Tags=True
+PointLightComponent.Cooking=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.MaterialParameters=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.Mobile=True
+NiagaraComponent.Variable=True
+NiagaraComponent.TransformCommon=True
+NiagaraComponent.Sockets=True
+NiagaraComponent.NiagaraComponent_Parameters=True
+NiagaraComponent.Niagara=True
+NiagaraComponent.Parameters=True
+NiagaraComponent.Attachment=True
+NiagaraComponent.Compilation=True
+NiagaraComponent.Lighting=True
+NiagaraComponent.Rendering=True
+NiagaraComponent.Navigation=True
+NiagaraComponent.Tags=True
+NiagaraComponent.ComponentReplication=True
+NiagaraComponent.Activation=True
+NiagaraComponent.Cooking=True
+NiagaraComponent.Events=True
+PointLightComponent.Variable=True
+PointLightComponent.Sockets=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2117,26 +2156,26 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/AI/BT
-MRUItem1=/Game/FirstPersonBP/AI/BB
-MRUItem2=/Game/FirstPersonBP/AI/FindNextPatrollingPoint
-MRUItem3=/Game/FirstPersonBP/AI/PatrollingComponent
-MRUItem4=/Game/FirstPersonBP/AI/PatrollingController
-MRUItem5=/Game/FirstPersonBP/AI/EnemyAI
-MRUItem6=/Game/Assets/Monster/Monster_Blueprint
-MRUItem7=/Game/FirstPersonBP/AI/Patrolling
-MRUItem8=/Game/FirstPersonBP/Maps/Pierre
+MRUItem0=/Game/FirstPersonBP/Maps/Pierre
+MRUItem1=/Game/FirstPersonBP/Maps/Antoine
+MRUItem2=/Game/Assets/Monster/Monster_Blueprint
+MRUItem3=/Game/FirstPersonBP/AI/BT
+MRUItem4=/Game/FirstPersonBP/AI/FindNextPatrollingPoint
+MRUItem5=/Game/FirstPersonBP/AI/PatrollingComponent
+MRUItem6=/Game/FirstPersonBP/AI/BB
+MRUItem7=/Game/FirstPersonBP/AI/PatrollingController
+MRUItem8=/Game/FirstPersonBP/AI/EnemyAI
 MRUItem9=/Game/EnemyAI/EnemyAIController
 MRUItem10=/Game/EnemyAI/EnemyAI
 MRUItem11=/Game/FirstPersonBP/AI/Spawn
 MRUItem12=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 MRUItem13=/Game/FirstPersonBP/AI/GameManager
-MRUItem14=/Game/EnemyAI/FindPlayer
-MRUItem15=/Game/FirstPersonBP/Blueprints/Weapon_BP
-MRUItem16=/Game/FirstPersonBP/Maps/Paul
-MRUItem17=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01
-MRUItem18=/Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton
-MRUItem19=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W
+MRUItem14=/Game/FirstPersonBP/AI/Patrolling
+MRUItem15=/Game/EnemyAI/FindPlayer
+MRUItem16=/Game/FirstPersonBP/Blueprints/Weapon_BP
+MRUItem17=/Game/FirstPersonBP/Maps/Paul
+MRUItem18=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01
+MRUItem19=/Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
@@ -2192,14 +2231,14 @@ ParticleModuleLocationBase="\"Object.Location.StartLocation\" \"Object.Location.
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent=
 ActorComponent=
 FirstPersonCharacter_C=
 Character=
 Pawn=
-CapsuleComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
@@ -2217,13 +2256,13 @@ HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Trans
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Collision.BodyInstance\" "
+SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 TargetPoint="\"Object.Display.SpriteComponent.Object.BodyInstance.WalkableSlopeOverride\" "
 GameManager_C=
@@ -2236,6 +2275,8 @@ AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 PatrollingComponent_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+NiagaraComponent="\"Object.Lighting.LightingChannels\" "
+FXSystemComponent="\"Object.Lighting.LightingChannels\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
