--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,6 @@ LastExecutedLaunchName=DESKTOP-HGRECG5
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -113,7 +112,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CameraSpeed=5
 RotGridEnabled=False
-GridEnabled=False
+CurrentRotGridSize=0
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -163,10 +162,15 @@ SequenceBrowser.HiddenColumns=Class
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/FirstPersonBP/Maps/Pierre
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/AI/Spawn.Spawn
+OpenAssetsAtExit=/Game/FirstPersonBP/AI/EnemyAI.EnemyAI
+OpenAssetsAtExit=/Game/FirstPersonBP/AI/Easy.Easy
+OpenAssetsAtExit=/Game/FirstPersonBP/AI/Medium.Medium
+OpenAssetsAtExit=/Game/FirstPersonBP/AI/Hard.Hard
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -1020,10 +1024,10 @@ PortalProxies.TimeStamp=2020.12.06-23.07.21
 PortalProxies.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem2=/Game/FirstPersonBP/Maps/Paul
-MRUItem3=/Game/FirstPersonBP/Maps/Pierre
+MRUItem0=/Game/FirstPersonBP/Maps/Pierre
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonBP/Maps/MainMenu
+MRUItem3=/Game/FirstPersonBP/Maps/Paul
 MRUItem4=/Game/FirstPersonBP/Maps/Antoine
 MRUItem5=/Game/FirstPersonBP/Maps/Juliano
 MRUItem6=/Game/FirstPersonBP/Maps/GameOver
@@ -1105,9 +1109,9 @@ ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,Parti
 CameraComponent=CameraComponent.PostProcess.Lens,
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 SceneComponent=CameraComponent.PostProcess.Lens,
-K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
+K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
 FirstPersonCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
-PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
+PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
 Nombre_Dash_C=CameraComponent.PostProcess.Lens,
 K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 Ui_C=
@@ -2209,6 +2213,41 @@ FirstPersonExampleMap_C.Tick=True
 FirstPersonExampleMap_C.Replication=True
 FirstPersonExampleMap_C.Actor=True
 FirstPersonExampleMap_C.Input=True
+Easy_C.Tick=True
+Easy_C.Replication=True
+Easy_C.Rendering=True
+Easy_C.Collision=True
+Easy_C.Actor=True
+Easy_C.Input=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.Navigation=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+Easy_C.TransformCommon=True
+Medium_C.Tick=True
+Medium_C.Replication=True
+Medium_C.Rendering=True
+Medium_C.Collision=True
+Medium_C.Actor=True
+Medium_C.Input=True
+Hard_C.Tick=True
+Hard_C.Replication=True
+Hard_C.Rendering=True
+Hard_C.Collision=True
+Hard_C.Actor=True
+Hard_C.Input=True
+Medium_C.TransformCommon=True
+Hard_C.TransformCommon=True
+K2Node_SwitchInteger.PinOptions=True
+Actor.Input=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2217,26 +2256,26 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/FirstPersonBP/Widgets/Ui2
-MRUItem2=/Game/FirstPersonBP/AI/EnemyAI
-MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem4=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem5=/Game/FirstPersonBP/Maps/Paul
-MRUItem6=/Game/FirstPersonBP/AI/GameManager
-MRUItem7=/Game/FirstPersonBP/Maps/Pierre
-MRUItem8=/Game/UI/GameOver
-MRUItem9=/Game/UI/MainMenu
-MRUItem10=/Game/FirstPersonBP/Blueprints/LaunchPad
-MRUItem11=/Game/FirstPersonBP/Blueprints/Zone_Damage
-MRUItem12=/Game/Assets/Weapon/Walls_Mat
-MRUItem13=/Game/Assets/Weapon/Edge_Color_4h
-MRUItem14=/Game/FirstPersonBP/Blueprints/Weapon_BP
-MRUItem15=/Game/FirstPersonBP/AI/Patrolling
-MRUItem16=/Game/FirstPersonBP/AI/Statuts
-MRUItem17=/Game/FirstPersonBP/AI/FindNextPatrollingPoint
-MRUItem18=/Game/FirstPersonBP/AI/PatrollingComponent
-MRUItem19=/Game/FirstPersonBP/AI/PatrollingController
+MRUItem0=/Game/FirstPersonBP/Maps/Pierre
+MRUItem1=/Game/FirstPersonBP/AI/Hard
+MRUItem2=/Game/FirstPersonBP/AI/Medium
+MRUItem3=/Game/FirstPersonBP/AI/Easy
+MRUItem4=/Game/FirstPersonBP/AI/EnemyAI
+MRUItem5=/Game/FirstPersonBP/AI/Spawn
+MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem7=/Game/FirstPersonBP/Widgets/Ui2
+MRUItem8=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem9=/Game/FirstPersonBP/Maps/MainMenu
+MRUItem10=/Game/FirstPersonBP/Maps/Paul
+MRUItem11=/Game/FirstPersonBP/AI/GameManager
+MRUItem12=/Game/UI/GameOver
+MRUItem13=/Game/UI/MainMenu
+MRUItem14=/Game/FirstPersonBP/Blueprints/LaunchPad
+MRUItem15=/Game/FirstPersonBP/Blueprints/Zone_Damage
+MRUItem16=/Game/Assets/Weapon/Walls_Mat
+MRUItem17=/Game/Assets/Weapon/Edge_Color_4h
+MRUItem18=/Game/FirstPersonBP/Blueprints/Weapon_BP
+MRUItem19=/Game/FirstPersonBP/AI/Patrolling
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -2287,7 +2326,7 @@ bHideUnrelatedNodes=False
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[29]\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Size.StartSize.Distribution\" "
@@ -2306,8 +2345,8 @@ CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess
 SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 FirstPersonCharacter_C=
-Character=
-Pawn=
+Character="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" "
+Pawn="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" "
 CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2322,8 +2361,8 @@ Ui_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTran
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
+Brush=
 HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
@@ -2338,13 +2377,13 @@ StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.Bod
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 TargetPoint="\"Object.Display.SpriteComponent.Object.BodyInstance.WalkableSlopeOverride\" "
 GameManager_C=
-Spawn_C=
+Spawn_C="\"Object.SpawnPoints\" \"Object.SpawnPoints\" "
 EnemyAI_C="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode=
 PatrollingComponent_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NiagaraComponent="\"Object.Lighting.LightingChannels\" "
@@ -2431,7 +2470,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2483,26 +2522,26 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Game/FirstPersonBP/AI/Hard.Hard;
+RecentlyPlaced=/Game/FirstPersonBP/AI/Medium.Medium;
+RecentlyPlaced=/Game/FirstPersonBP/AI/Easy.Easy;
+RecentlyPlaced=/Game/FirstPersonBP/AI/Spawn.Spawn;
 RecentlyPlaced=/Game/Assets/Arrow.Arrow;
 RecentlyPlaced=/Game/Assets/Monster/M_Particules_Monster.M_Particules_Monster;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/LaunchPad.LaunchPad;
 RecentlyPlaced=/Game/Assets/Weapon/Walls_Mat.Walls_Mat;
 RecentlyPlaced=/Game/Assets/Weapon/Edge_Color_4h.Edge_Color_4h;
 RecentlyPlaced=/Game/Assets/Weapon/Edge_Color_4h_Inst1.Edge_Color_4h_Inst1;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/HitActor_Test.HitActor_Test;
 RecentlyPlaced=/Game/FirstPersonBP/AI/EnemyAI.EnemyAI;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Assets/Monster/FX_Smoke.FX_Smoke;
 RecentlyPlaced=/Game/Assets/Monster/Monster_Blueprint.Monster_Blueprint;
 RecentlyPlaced=/Game/EnemyAI/EnemyAI.EnemyAI;
-RecentlyPlaced=/Game/FirstPersonBP/AI/Patrolling.Patrolling;
-RecentlyPlaced=/Game/FirstPersonBP/AI/Spawn.Spawn;
-RecentlyPlaced=/Game/FirstPersonBP/AI/GameManager.GameManager;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Zone_Damage.Zone_Damage;
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
