--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,6 +20,7 @@ MaterialQualityLevel=1
 PreviewFeatureLevel=3
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -160,15 +161,11 @@ SequenceBrowser.HiddenColumns=Class
 ContentBrowserTab1.SelectedPaths=/Game/FXVarietyPack/Particles
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/Pierre
+LastLevel=/Game/FirstPersonBP/Maps/Juliano
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/AI/Spawn.Spawn
-OpenAssetsAtExit=/Game/FirstPersonBP/AI/EnemyAI.EnemyAI
-OpenAssetsAtExit=/Game/FirstPersonBP/AI/Easy.Easy
-OpenAssetsAtExit=/Game/FirstPersonBP/AI/Medium.Medium
-OpenAssetsAtExit=/Game/FirstPersonBP/AI/Hard.Hard
+OpenAssetsAtExit=/Engine/Tutorial/Landscape/TutorialAssets/Landscape_Material.Landscape_Material
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -1024,10 +1021,10 @@ StaticMeshEditor.TimeStamp=2020.12.07-06.42.39
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/FXVarietyPack/Map/Overview
-MRUItem2=/Game/FirstPersonBP/Maps/Antoine
-MRUItem3=/Game/FirstPersonBP/Maps/Juliano
+MRUItem0=/Game/FirstPersonBP/Maps/Juliano
+MRUItem1=/Game/FirstPersonBP/Maps/Antoine
+MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem3=/Game/FXVarietyPack/Map/Overview
 MRUItem4=/Game/FirstPersonBP/Maps/MainMenu
 MRUItem5=/Game/FirstPersonBP/Maps/Paul
 MRUItem6=/Game/FirstPersonBP/Maps/Pierre
@@ -2243,6 +2240,95 @@ StaticMesh.Navigation=True
 StaticMeshActor.Surface Materials=True
 StaticMeshActor.Geometry=True
 StaticMeshActor.Surface Properties=True
+EnemyAITuto_C.TransformCommon=True
+EnemyAITuto_C.Animation=True
+EnemyAITuto_C.Mesh=True
+EnemyAITuto_C.Physics=True
+EnemyAITuto_C.Clothing=True
+EnemyAITuto_C.MasterPoseComponent=True
+EnemyAITuto_C.Lighting=True
+EnemyAITuto_C.ClothingSimulation=True
+EnemyAITuto_C.SkinWeights=True
+EnemyAITuto_C.Navigation=True
+EnemyAITuto_C.VirtualTexture=True
+EnemyAITuto_C.Tags=True
+EnemyAITuto_C.Activation=True
+EnemyAITuto_C.Cooking=True
+EnemyAITuto_C.Character Movement (General Settings)=True
+EnemyAITuto_C.Character Movement: Walking=True
+EnemyAITuto_C.Character Movement: Jumping / Falling=True
+EnemyAITuto_C.Character Movement (Networking)=True
+EnemyAITuto_C.Character Movement: Swimming=True
+EnemyAITuto_C.Character Movement: Flying=True
+EnemyAITuto_C.Character Movement: Custom Movement=True
+EnemyAITuto_C.Character Movement (Rotation Settings)=True
+EnemyAITuto_C.Character Movement: Physics Interaction=True
+EnemyAITuto_C.Character Movement=True
+EnemyAITuto_C.Character Movement: Avoidance=True
+EnemyAITuto_C.RootMotion=True
+EnemyAITuto_C.Character Movement: NavMesh Movement=True
+EnemyAITuto_C.NavMovement=True
+EnemyAITuto_C.Velocity=True
+EnemyAITuto_C.PlanarMovement=True
+EnemyAITuto_C.MovementComponent=True
+EnemyAITuto_C.Shape=True
+Landscape.TransformCommon=True
+Landscape.Information=True
+Landscape.LOD=True
+Landscape.Landscape=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Replication=True
+Landscape.Input=True
+Landscape.Actor=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Target Layers=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Replication=True
+LandscapeGizmoActiveActor.Collision=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
+MaterialExpressionLandscapeLayerSample.MaterialExpressionLandscapeLayerWeight=True
+MaterialExpressionLandscapeLayerSample.MaterialExpression=True
+MaterialExpressionLandscapeLayerWeight.MaterialExpressionLandscapeLayerWeight=True
+MaterialExpressionLandscapeLayerWeight.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+SkyLightComponent.TransformCommon=True
+SkyLightComponent.Light=True
+SkyLightComponent.DistanceFieldAmbientOcclusion=True
+SkyLightComponent.RayTracing=True
+SkyLightComponent.Rendering=True
+SkyLightComponent.Tags=True
+SkyLightComponent.Cooking=True
+WorldSettings.AI=True
+WorldSettings.LOD=True
+WorldSettings.Cooking=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpressionLandscapeLayerCoords=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
+SkyLight.AssetUserData=True
+SkyLight.LOD=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2251,26 +2337,26 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem2=/Game/FXVarietyPack/Map/Overview
-MRUItem3=/Game/Geometry/Meshes/1M_Cube
-MRUItem4=/Game/FirstPersonBP/Maps/Antoine
-MRUItem5=/Game/FirstPersonBP/Maps/Juliano
-MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem7=/Game/FirstPersonBP/Widgets/Ui2
-MRUItem8=/Game/FirstPersonBP/AI/EnemyAI
-MRUItem9=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem10=/Game/FirstPersonBP/Maps/Paul
-MRUItem11=/Game/FirstPersonBP/AI/GameManager
-MRUItem12=/Game/FirstPersonBP/Maps/Pierre
-MRUItem13=/Game/UI/GameOver
-MRUItem14=/Game/UI/MainMenu
-MRUItem15=/Game/FirstPersonBP/Blueprints/LaunchPad
-MRUItem16=/Game/FirstPersonBP/Blueprints/Zone_Damage
-MRUItem17=/Game/Assets/Weapon/Walls_Mat
-MRUItem18=/Game/Assets/Weapon/Edge_Color_4h
-MRUItem19=/Game/FirstPersonBP/Blueprints/Weapon_BP
+MRUItem0=/Engine/Tutorial/Landscape/TutorialAssets/Landscape_Material
+MRUItem1=/Game/Assets/Material/LandscapeMaterial
+MRUItem2=/Game/FirstPersonBP/Maps/Juliano
+MRUItem3=/Game/FirstPersonBP/Maps/Antoine
+MRUItem4=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem5=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem6=/Game/FXVarietyPack/Map/Overview
+MRUItem7=/Game/Geometry/Meshes/1M_Cube
+MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem9=/Game/FirstPersonBP/Widgets/Ui2
+MRUItem10=/Game/FirstPersonBP/AI/EnemyAI
+MRUItem11=/Game/FirstPersonBP/Maps/MainMenu
+MRUItem12=/Game/FirstPersonBP/Maps/Paul
+MRUItem13=/Game/FirstPersonBP/AI/GameManager
+MRUItem14=/Game/FirstPersonBP/Maps/Pierre
+MRUItem15=/Game/UI/GameOver
+MRUItem16=/Game/UI/MainMenu
+MRUItem17=/Game/FirstPersonBP/Blueprints/LaunchPad
+MRUItem18=/Game/FirstPersonBP/Blueprints/Zone_Damage
+MRUItem19=/Game/Assets/Weapon/Walls_Mat
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -2339,8 +2425,8 @@ ParticleModuleLocationBase="\"Object.Location.StartLocation\" \"Object.Location.
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
+ActorComponent=
 FirstPersonCharacter_C=
 Character=
 Pawn=
@@ -2358,8 +2444,8 @@ Ui_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTran
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume=
-Brush=
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
@@ -2389,6 +2475,10 @@ FindNextPatrollingPoint_C="\"Object.Location Key\" \"Object.Location Key\" "
 BTTask_BlueprintBase=
 BTTaskNode=
 BTNode=
+MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
+MaterialExpression=
+SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
+Info="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2486,6 +2576,7 @@ bDeleteSourceFilesWithAssets=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
@@ -2518,6 +2609,8 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
+RecentlyPlaced=/Game/EnemyAI/EnemyAITuto.EnemyAITuto;
 RecentlyPlaced=/Game/FXVarietyPack/Particles/P_ky_lightning3.P_ky_lightning3;
 RecentlyPlaced=/Game/FXVarietyPack/Particles/P_ky_lightning2.P_ky_lightning2;
 RecentlyPlaced=/Game/FXVarietyPack/Particles/P_ky_lightning1.P_ky_lightning1;
@@ -2536,8 +2629,6 @@ RecentlyPlaced=/Game/FXVarietyPack/Particles/P_ky_aquaStorm.P_ky_aquaStorm;
 RecentlyPlaced=/Game/FXVarietyPack/Particles/P_ky_darkStorm.P_ky_darkStorm;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Checker_Dot.M_Tech_Checker_Dot;
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2760,7 +2851,7 @@ bDrawGrid=False
 PrimType=1
 
 [LandscapeEdit]
-BrushRadius=373.596100
+BrushRadius=79.766754
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
