LEVEL DESIGN LANDSCAPE v2

--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,14 +158,12 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab1.SelectedPaths=/Game/FXVarietyPack/Particles
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/Juliano
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Engine/Tutorial/Landscape/TutorialAssets/Landscape_Material.Landscape_Material
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -1022,11 +1020,11 @@ StaticMeshEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/Juliano
-MRUItem1=/Game/FirstPersonBP/Maps/Antoine
-MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem3=/Game/FXVarietyPack/Map/Overview
-MRUItem4=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem5=/Game/FirstPersonBP/Maps/Paul
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonBP/Maps/Paul
+MRUItem3=/Game/FirstPersonBP/Maps/Antoine
+MRUItem4=/Game/FXVarietyPack/Map/Overview
+MRUItem5=/Game/FirstPersonBP/Maps/MainMenu
 MRUItem6=/Game/FirstPersonBP/Maps/Pierre
 MRUItem7=/Game/FirstPersonBP/Maps/GameOver
 
@@ -2337,19 +2335,19 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/Tutorial/Landscape/TutorialAssets/Landscape_Material
-MRUItem1=/Game/Assets/Material/LandscapeMaterial
-MRUItem2=/Game/FirstPersonBP/Maps/Juliano
-MRUItem3=/Game/FirstPersonBP/Maps/Antoine
-MRUItem4=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem5=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem6=/Game/FXVarietyPack/Map/Overview
-MRUItem7=/Game/Geometry/Meshes/1M_Cube
-MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem9=/Game/FirstPersonBP/Widgets/Ui2
-MRUItem10=/Game/FirstPersonBP/AI/EnemyAI
-MRUItem11=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem12=/Game/FirstPersonBP/Maps/Paul
+MRUItem0=/Game/FirstPersonBP/Maps/Juliano
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonBP/Maps/Paul
+MRUItem3=/Engine/Tutorial/Landscape/TutorialAssets/Landscape_Material
+MRUItem4=/Game/Assets/Material/LandscapeMaterial
+MRUItem5=/Game/FirstPersonBP/Maps/Antoine
+MRUItem6=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem7=/Game/FXVarietyPack/Map/Overview
+MRUItem8=/Game/Geometry/Meshes/1M_Cube
+MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem10=/Game/FirstPersonBP/Widgets/Ui2
+MRUItem11=/Game/FirstPersonBP/AI/EnemyAI
+MRUItem12=/Game/FirstPersonBP/Maps/MainMenu
 MRUItem13=/Game/FirstPersonBP/AI/GameManager
 MRUItem14=/Game/FirstPersonBP/Maps/Pierre
 MRUItem15=/Game/UI/GameOver
@@ -2478,7 +2476,7 @@ BTNode=
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
 MaterialExpression=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
-Info="\"Object.Light.LightComponent.Object.Light.LightColor\" "
+Info=
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2609,6 +2607,7 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
 RecentlyPlaced=/Game/EnemyAI/EnemyAITuto.EnemyAITuto;
 RecentlyPlaced=/Game/FXVarietyPack/Particles/P_ky_lightning3.P_ky_lightning3;
@@ -2628,7 +2627,6 @@ RecentlyPlaced=/Game/FXVarietyPack/Particles/P_ky_shotShockwave.P_ky_shotShockwa
 RecentlyPlaced=/Game/FXVarietyPack/Particles/P_ky_aquaStorm.P_ky_aquaStorm;
 RecentlyPlaced=/Game/FXVarietyPack/Particles/P_ky_darkStorm.P_ky_darkStorm;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2851,7 +2849,7 @@ bDrawGrid=False
 PrimType=1
 
 [LandscapeEdit]
-BrushRadius=79.766754
+BrushRadius=139.859512
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -2860,7 +2858,7 @@ bUseFlattenTarget=False
 FlattenTarget=0.000000
 TerraceSmooth=0.000100
 TerraceInterval=1.000000
-RampWidth=2000.000000
+RampWidth=315.618805
 RampSideFalloff=0.400000
 bCombinedLayersOperation=True
 SmoothFilterKernelSize=4
@@ -2868,8 +2866,8 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
-ToolStrength=0.238094
-BrushFalloff=0.728570
+ToolStrength=1.000000
+BrushFalloff=1.000000
 
 [FoliageEdit]
 Radius=0.100000
