--- a/FastFPSProj/Saved/Config/Windows/Engine.ini
+++ b/FastFPSProj/Saved/Config/Windows/Engine.ini
@@ -46,14 +46,5 @@ MLSDKPath=(Path="")
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
+None=======
 
-<<<<<<< HEAD
-=======
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=True
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
->>>>>>> main
